src/objects/ffirule__IntegrationRule__c.object
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrule</customHelpPage>
    <fields>
        <fullName>ffirule__EmailTemplate__c</fullName>
        <label>Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__PartialSave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Saves target records even if other records in the batch fail to save.</description>
        <label>Partial Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceObjectNameField__c</fullName>
        <label>Source Object Name Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceObjectProcessField__c</fullName>
        <label>Source Object Process Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceObjectProcessedField__c</fullName>
        <label>Source Object Processed Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceObjectReferenceToTargetField__c</fullName>
        <label>Source Object Reference to Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceObject__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SyncEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__SyncIsMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetCreationOnSourceInsert__c</fullName>
        <label>Target Relation with Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One to Many</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffirule__TargetObjectNameField__c</fullName>
        <label>Target Object Name Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetObjectProcessedField__c</fullName>
        <label>Processed Field on Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetObjectSourceCountField__c</fullName>
        <label>Relation Count Field on Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetObjectSyncActiveField__c</fullName>
        <label>Target Object Sync Active Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetObjectSyncControlField__c</fullName>
        <label>Target Object Sync Control Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetObjectSyncControlWhen__c</fullName>
        <label>Target Object Sync Control When</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetObject__c</fullName>
        <label>Target Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetSourceMaximum__c</fullName>
        <label>Relation Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ClickLink Rule</label>
    <listViews>
        <fullName>ffirule__All</fullName>
        <columns>NAME</columns>
        <columns>ffirule__SourceObject__c</columns>
        <columns>ffirule__TargetObject__c</columns>
        <columns>ffirule__SyncEnabled__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ClickLink Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>